# androlo

./: build.gradle  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/example/androlo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/androlo/: Detector.kt  MainActivity.kt
app/src/main/res/layout/: activity_detection.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/androlo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
